<resources>
    <string name="app_name">Android E Restaurant</string>
    <string name="home_entrees">Entrées</string>
    <string name="home_plats">Plats</string>
    <string name="home_desserts">Desserts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LoginActivity</string>
    <string name="register">RegisterActivity</string>
    <string name="mot_de_passe_8_caract_res_minimum">Mot de passe (8 caractères minimum)</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="already_registered_nlogin_here">Already Registered?\nLogin Here</string>
    <string name="m_inscrire">M\'inscrire</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="adresse">Adresse</string>
    <string name="pr_nom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="phone_number">Numéro de téléphone</string>
    <string name="total"> Total : </string>
    <string name="itemAdded"> Votre plat a bien été ajouté à votre panier </string>
    <string name="basket"> Panier </string>
    <string name="register_title">RegisterFragment</string>
    <string name="login_title">LoginFragment</string>
</resources>